# LogicCircuit

./: CMakeLists.txt  main.cpp
header/: DefaultNode.h  Graph.h  Node.h  Pin.h
header/Nodes/: AndNode.h  BulbNode.h  ButtonNode.h  NandNode.h  NotNode.h  OrNode.h  SwitchNode.h
source/: DefaultNode.cpp  Graph.cpp  Node.cpp  Pin.cpp
source/Nodes/: AndNode.cpp  BulbNode.cpp  ButtonNode.cpp  NandNode.cpp  NotNode.cpp  OrNode.cpp  SwitchNode.cpp
